MFH: fix bug #45028 (CRC32 output endianness is different between crc32() and hash())