ext/hash/hash_crc32.c
@@ -17,7 +17,7 @@
   +----------------------------------------------------------------------+
 */
 
-/* $Id: hash_crc32.c,v 1.2.2.3.2.2.2.2 2008/04/21 15:37:46 tony2001 Exp $ */
+/* $Id: hash_crc32.c,v 1.2.2.3.2.2.2.3 2008/08/18 14:29:54 tony2001 Exp $ */
 
 #include "php_hash.h"
 #include "php_hash_crc32.h"
@@ -56,6 +56,16 @@ PHP_HASH_API void PHP_CRC32Final(unsigned char digest[4], PHP_CRC32_CTX *context
 	context->state = 0;
 }
 
+PHP_HASH_API void PHP_CRC32BFinal(unsigned char digest[4], PHP_CRC32_CTX *context)
+{
+	context->state=~context->state;
+	digest[0] = (unsigned char) ((context->state >> 24) & 0xff);
+	digest[1] = (unsigned char) ((context->state >> 16) & 0xff);
+	digest[2] = (unsigned char) ((context->state >> 8) & 0xff);
+	digest[3] = (unsigned char) (context->state & 0xff);
+	context->state = 0;
+}
+
 PHP_HASH_API int PHP_CRC32Copy(const php_hash_ops *ops, PHP_CRC32_CTX *orig_context, PHP_CRC32_CTX *copy_context)
 {
 	copy_context->state = orig_context->state;
@@ -75,7 +85,7 @@ const php_hash_ops php_hash_crc32_ops = {
 const php_hash_ops php_hash_crc32b_ops = {
 	(php_hash_init_func_t) PHP_CRC32Init,
 	(php_hash_update_func_t) PHP_CRC32BUpdate,
-	(php_hash_final_func_t) PHP_CRC32Final,
+	(php_hash_final_func_t) PHP_CRC32BFinal,
 	(php_hash_copy_func_t) PHP_CRC32Copy,
 	4, /* what to say here? */
 	4,
